@@ -1,0 +1,2 @@
+openbsc/doc/examples/osmo-bsc_mgcp
+openbsc/doc/examples/osmo-bsc-sccplite
