@@ -1,0 +1,2 @@
+/usr/bin/osmo-bsc_mgcp
+/usr/bin/osmo-bsc-sccplite
