@@ -1,1 +1,0 @@
-openbsc/doc/examples/osmo-bsc_mgcp
