@@ -1,2 +1,0 @@
-/usr/bin/osmo-bsc_mgcp
-/usr/bin/osmo-bsc
