@@ -17,7 +17,7 @@ override_dh_autoreconf:
 	cd openbsc && autoreconf --install --force
 
 override_dh_strip:
-	dh_strip -posmocom-bsc --dbg-package=osmocom-bsc-dbg
+	dh_strip -posmocom-bsc-sccplite --dbg-package=osmocom-bsc-sccplite-dbg
 	dh_strip -posmocom-nitb --dbg-package=osmocom-nitb-dbg
 	dh_strip -posmocom-ipaccess-utils --dbg-package=osmocom-ipaccess-utils-dbg
 	dh_strip -posmocom-bs11-utils --dbg-package=osmocom-bs11-utils-dbg
